Sass spacing fix

--- a/sass/navigation/_scroll-to-top.scss
+++ b/sass/navigation/_scroll-to-top.scss
@@ -25,12 +25,12 @@
 		width: 18px;	
 	}
 
-	&:hover {
+	&:hover {	
 		background: rgba(0, 0, 0, .65);
 	}
 
 	&.show {
 		opacity: 1;
-    	transform: scale(1, 1);
+		transform: scale(1)
 	}
 }
